@@ -1,3 +1,9 @@
+2012-06-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/player/world_model.cpp:
+	- 分身やワープが起きないように，信頼性が高くても背番号を認識できて
+	いないプレイヤを先に消去する方針に変更
+
 2012-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/action_effector.cpp:
